# fiche_de_paye

./: Cargo.toml  README.md
.github/workflows/: rust.yml
back/: .gitignore  Cargo.toml  prompt.txt
back/src/: claude.rs  database.rs  datetime.rs  main.rs
front/: package-lock.json
src/: app.rs  components.rs  main.rs
src/app/: analyse.rs  event.rs  paystubs.rs  store.rs  theme.rs
src/components/: graph.rs  menu.rs  paystubs.rs  settings.rs
