[package]
name = "fiche_de_paie"
version = "0.1.0"
edition = "2024"

[dependencies]
bitcode = "0.6.9"
duct = "1.1.1"
eframe = { version = "0.35", features = ["default"] }
egui-phosphor = { git = "https://github.com/crumblingstatue/egui-phosphor", branch = "egui-035", features = [
    "thin",
    "light",
    "regular",
    "bold",
    "fill",
] }
egui_extras = "0.35.0"
egui_plot = "0.36.0"
log = "0.4"
redb = "4.1.0"
rfd = "0.17.2"
serde = "1.0.228"
serde_json = "1.0.150"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["rt"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.4", features = ["v4"] }

[dev-dependencies]
test-log = { version = "0.2.21", default-features = false, features = [
    "trace",
] }
